# megex

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  darray.h  megex.h
